VideoFrame::AllocationSize test against odd values.

Skip aligning to even dimensions for various non YUV plannar formats.

BUG=662911

Review-Url: https://codereview.chromium.org/2481343002
Cr-Commit-Position: refs/heads/master@{#430465}

Former-commit-id: 54d98c87e71183a3346d3bbcc1a20b0338af9ffe